# poc_try

./: .dockerignore  AGENT.MD  Dockerfile  LICENSE  README.md  start.sh
backend/: .env.example  README.md  openapi.json  pyproject.toml
backend/app/: main.py  openai_utils.py  schemas.py  settings.py
backend/app/rag/: pipeline.py
backend/app/vlm/: client.py
backend/scripts/: export_openapi.py
frontend/src/: App.tsx  api.ts  index.css
scripts/: dev.sh
