[project]
name = "used-instrument-backend"
version = "0.1.0"
description = "FastAPI backend for used instrument valuation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-openai>=0.1.14",
  "chromadb>=0.5.0",
  "openai>=1.40.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.rag", "app.vlm"]

[tool.setuptools.package-data]
"app.rag" = ["data/*.jsonl"]

[tool.uv]
package = true

[tool.uv.pip]
emit-index-url = false
